fix weird gap at the top of the page

--- a/css/keyimage_4_20210113.css
+++ b/css/keyimage_4_20210113.css
@@ -4,6 +4,10 @@
 	background-color:rgb(216,202,173);
 }
 
+.zoomTarget {
+    /*border:1px solid red;*/
+}
+
 /*This file has the positions of the zoomTarget(s) for each image.*/
 .zoomTarget[data-index="1"] {
     position:absolute;
