--- a/css/keyimage_shared_20210113.css
+++ b/css/keyimage_shared_20210113.css
@@ -9,6 +9,7 @@ body {
 
 .container {
     position: absolute;
+    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,6 +31,10 @@ body {
     flex-direction:column;
     align-items: center;
     justify-content:center;
+}
+
+.selectedZoomTarget {
+  border:1px solid lime;
 }
 
 img {
@@ -96,9 +101,7 @@ div {
 
 #return-link:hover {
     background-color:#F5DEB3;
-    
 }
-
 
 .caption-frame {
   display:inline-block;
@@ -114,6 +117,11 @@ div {
   margin:1em;
   font-size:20px;
   font-family: Avenir, Arial, Helvetica, sans-serif;
+  display:none;
+}
+
+.caption-frame .caption {
+  display:block;
 }
 
 .caption p {
